# IROS2021-experiments

./: 0001-Always-build-behavior_tree_editor-as-STATIC.patch  CMakeLists.txt  Dockerfile.bt-implementation  Dockerfile.scope  README.md  docker-compose.yml
cmake/: CMakeLists.txt  SkillAutogen.cmake
conf/: BatteryLevel.ini  BatteryNotCharging.ini  GoToChargingStation.ini  GoToDestination.ini  IsAtChargingStation.ini  IsAtDestination.ini
maps/: locations.ini  map_test_grid.pgm  map_test_grid.yaml  maps_collection.ini
src/: CMakeLists.txt
src/BT/: main.cpp  yarp_node.h
src/BT_protocol/: CMakeLists.txt
src/BatteryLevel_skill/: BatteryLevelSkill.cpp  BatteryLevelSkill.h  BatteryLevelSkillDataModel.cpp  BatteryLevelSkillDataModel.h  BatteryLevelSkillStateMachine.scxml  CMakeLists.txt  main.cpp
src/BatteryNotCharging_skill/: BatteryNotChargingSkillStateMachine.scxml  CMakeLists.txt
src/Battery_component/: BatteryComponent.cpp  CMakeLists.txt
src/Battery_protocol/: BatteryReader.cpp  BatteryReader.h  BatteryReaderMonitorObject.cpp  BatteryReaderMonitorObject.h  CMakeLists.txt  ChargingStatus.cpp  ChargingStatus.h  battery_commands.thrift
src/Blackboard_component/: BlackboardComponent.cpp  CMakeLists.txt  entries.ini
src/Blackboard_protocol/: CMakeLists.txt  blackboard_commands.thrift
src/GoTo_component/: CMakeLists.txt  GoToComponent.cpp
src/GoTo_protocol/: CMakeLists.txt  GoTo.cpp  GoTo.h  GoTo.thrift  GoToMonitorObject.cpp  GoToMonitorObject.h  GoToStatus.cpp  GoToStatus.h
src/GoTo_skill/: CMakeLists.txt  GoToSkillStateMachine.scxml
src/Id_component/: CMakeLists.txt  IdComponent.cpp
src/Id_protocol/: CMakeLists.txt  Id.thrift
src/IsAt_skill/: CMakeLists.txt  IsAtSkillStateMachine.scxml
src/Monitor/: BatteryLevelMonitor.scxml  CMakeLists.txt  DestinationMonitor.scxml  main.cpp  monitor.qml  res.qrc
src/fakeBatteryChargingStation/: CMakeLists.txt  fakeBatteryChargingStation.cpp
src/portmonitor_carrier/: CMakeLists.txt  DummyConnector2.cpp  DummyConnector2.h  MonitorLogComponent.cpp  PortMonitor.cpp  PortMonitor.h  WARNING.txt
src/skill-code-gen/: CMakeLists.txt  Restore-to-test.sh  SkillConfigReader.cpp  SkillConfigReader.h  SkillGenerator.cpp  SkillGenerator.h  list_templates.qrc  main.cpp  ports-connect-description.txt  qscxmlcompiler.cpp  qscxmlcompiler_p.h  readme.md
src/skill-code-gen/input-files/config-skills/: BatteryLevelSkill.conf  GoToSkill.conf  IsAtSkill.conf
src/skill-code-gen/skill-template-files/: Name_SkillDataModel_cpp.t  Name_SkillDataModel_h.t  Name_Skill_cpp.t  Name_Skill_h.t  main_cpp.t
